--- a/src/styles/SkeletonStyle/Column/CompareColumnSkeleton.module.css
+++ b/src/styles/SkeletonStyle/Column/CompareColumnSkeleton.module.css
@@ -46,6 +46,7 @@
 .icon,
 .number,
 .detail {
+    border-radius: 4px;
     background: linear-gradient(90deg,
             #e2e2e2 25%,
             #f0f0f0 37%,
