--- a/src/styles/PageStyle/DashboardPage.module.css
+++ b/src/styles/PageStyle/DashboardPage.module.css
@@ -22,6 +22,6 @@
     width: 100%;
     height: auto;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 1.5rem;
 }
