--- a/src/styles/SkeletonStyle/Stats/StatsSkeleton.module.css
+++ b/src/styles/SkeletonStyle/Stats/StatsSkeleton.module.css
@@ -52,10 +52,10 @@
 /* Shimmer Animation */
 @keyframes shimmer {
     0% {
-        background-position: -200px 0;
+        background-position: 0% 0;
     }
 
     100% {
-        background-position: 200px 0;
+        background-position: 100% 0;
     }
 }
